--- a/03-client-server/package.json
+++ b/03-client-server/package.json
@@ -1,3 +1,15 @@
 {
+  "name": "03-client-server",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "",
+  "dependencies": {
+    "ejs": "^2.4.1",
+    "express": "^4.13.4"
+  }
 }
